rpmdevtools x.x (20xx-xx-xx)

  Ville Skyttä:
  - bash completion improvements.
  - Make python_site* definitions in python spec template work with Python 3.
  - Make rpmdev-bumpspec work with Python 3.
  - Initial Python 3 compatibility changes to other tools.

  Mads Kiilerich:
  - Fix pear_name definition in php-pear spec template (#528907).

rpmdevtools 7.5 (2009-09-17)

  Chris Weyl:
  - Add %{?perl_default_filter} to perl spec template (#502403).

  Ville Skyttä:
  - Sync with upstream devscripts 2.10.55.

rpmdevtools 7.4 (2009-08-21)

  Ville Skyttä:
  - Insert bullet if one if not available in comment given to rpmdev-bumpspec.
  - Wrap unformatted long comments in rpmdev-bumpspec.
  - Add lzip support to rpmdev-extract.
  - Add -L/--long-list and -c/--contents options to rpmdev-diff.
  - Change default diff options to -U0 with rpmdev-diff -l and -L.
  - Add -p to default diff options with rpmdev-diff's non-list mode.
  - Improve separation of internal and diff options in rpmdev-diff.
  - Make rpmdev-extract -q quieter with some tarballs.
  - Switch to xz compressed tarball.
  - Rewrite deprecated bits in rpmdev-bumpspec, python >= 2.4 is now required.
  - Remove rpmdevtools.spec from dist tarball, it's maintained elsewhere anyway.
  - Add bash completion for rpmdev-extract and rpminfo.
  - Improve xz detection in rpmdev-extract (if file >= 5.01 is installed),
    decompress lzma files with xz.
  - Add annotate-output, checkbashisms, licensecheck, and manpage-alert from
    Debian's devscripts 2.10.54 (svn r1956) package (#466353).
  - Fix rpmdev-md5 and friends with relative paths to archives.
  - Document rpmdev-newspec's long options.
  - Add rpmdev-newspec bash completion.
  - Document packager info sources for rpmdev-packager (fedorahosted#10).
  - Make php-pear and ocaml spec templates more useful without newspec.
  - Fix formatting error in rpmdev-bumpspec man page (fedorahosted#9).
  - Add R spec template (#215927).

rpmdevtools 7.3 (2009-05-25)
